Fix transient window repositioning in overview mode

When a transient descendent is repositioned in the overview mode,
it should have to re-compute the transform for the overview item,
otherwise the transient descendent may be positioned incorrectly.

This happens quite more often when window service is used, like
reported in the bug; the main window's bounds change and its
transient descendents bounds change happen asynchronously.

Bug: 882654
Test: manually
Change-Id: I2f958d40337ba7239a27533ed17547c2a8456342
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1510172
Commit-Queue: Jun Mukai <mukai@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#639136}
Former-commit-id: d4e57f69fd7b3412a7f09fe74077d65f361d6cb6